<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".MainActivity">

    <EditText
        android:id="@+id/myemailTo"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:ems="10"
        android:hint="@string/jhghj"
        android:inputType="textPersonName"
        android:text="@string/jgh"
        android:autofillHints=""
        tools:ignore="VisualLintTextFieldSize" />

    <EditText
        android:id="@+id/myEmailFrom"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:autofillHints=""
        android:ems="10"
        android:hint="@string/emailfromtxt"
        android:inputType="textPersonName"
        android:minHeight="48dp"
        android:text=""
        tools:ignore="TextFields,VisualLintTextFieldSize" />

    <EditText
        android:id="@+id/myEmailBody"
        android:layout_width="match_parent"
        android:layout_height="425dp"
        android:autofillHints=""
        android:ems="10"
        android:gravity="start|top"
        android:hint="@string/entertextHere"
        android:inputType="textMultiLine"
        tools:ignore="TextFields,VisualLintTextFieldSize" />

    <Button
        android:id="@+id/button4"
        android:layout_width="100dp"
        android:layout_gravity="right"
        android:layout_height="wrap_content"
        android:text="@string/sendBtn"
        tools:ignore="RtlHardcoded" />

</LinearLayout>