<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="16dp"
    tools:context=".SQLiteExample.NewContactActivity"
    >

    <EditText
        android:id="@+id/edtfirstname"
        android:layout_width="265dp"
        android:layout_height="wrap_content"
        android:layout_alignParentStart="true"
        android:layout_alignParentTop="true"
        android:layout_alignParentEnd="true"
        android:layout_marginStart="89dp"
        android:layout_marginTop="12dp"
        android:layout_marginEnd="104dp"
        android:autofillHints=""
        android:ems="10"
        android:hint="@string/firstname"
        android:inputType="textPersonName"
        tools:ignore="TouchTargetSizeCheck,VisualLintTextFieldSize" />

    <EditText
        android:id="@+id/edtsecondname"
        android:layout_width="264dp"
        android:layout_height="wrap_content"
        android:layout_below="@+id/edtfirstname"
        android:layout_alignParentStart="true"
        android:layout_alignParentEnd="true"
        android:layout_marginStart="68dp"
        android:layout_marginTop="19dp"
        android:layout_marginEnd="95dp"
        android:autofillHints=""
        android:ems="10"
        android:hint="@string/secondname"
        android:inputType="textPersonName"
        tools:ignore="TouchTargetSizeCheck,VisualLintTextFieldSize" />

    <EditText
        android:id="@+id/edtphonenumber"
        android:layout_width="267dp"
        android:layout_height="wrap_content"
        android:layout_below="@+id/edtsecondname"
        android:layout_alignParentStart="true"
        android:layout_alignParentEnd="true"
        android:layout_marginStart="66dp"
        android:layout_marginTop="12dp"
        android:layout_marginEnd="94dp"
        android:autofillHints=""
        android:ems="10"
        android:hint="@string/phone_number"
        android:inputType="number|textPersonName"
        tools:ignore="TouchTargetSizeCheck,VisualLintTextFieldSize" />

    <EditText
        android:id="@+id/edtemail"
        android:layout_width="264dp"
        android:layout_height="wrap_content"
        android:layout_below="@+id/edtphonenumber"
        android:layout_alignParentStart="true"
        android:layout_alignParentEnd="true"
        android:layout_marginStart="64dp"
        android:layout_marginTop="20dp"
        android:layout_marginEnd="99dp"
        android:autofillHints=""
        android:ems="10"
        android:hint="@string/email"
        android:inputType="textWebEmailAddress|textPersonName|textEmailSubject"
        tools:ignore="TouchTargetSizeCheck,VisualLintTextFieldSize" />

    <EditText
        android:id="@+id/edthomeaddress"
        android:layout_width="267dp"
        android:layout_height="wrap_content"
        android:layout_below="@+id/edtemail"
        android:layout_alignParentStart="true"
        android:layout_alignParentEnd="true"
        android:layout_marginStart="63dp"
        android:layout_marginTop="19dp"
        android:layout_marginEnd="97dp"
        android:autofillHints=""
        android:ems="10"
        android:hint="@string/home_address"
        android:inputType="textPersonName"
        tools:ignore="TouchTargetSizeCheck,VisualLintTextFieldSize" />

    <Button
        android:id="@+id/btnsave"
        android:layout_width="215dp"
        android:layout_height="wrap_content"
        android:layout_below="@+id/edthomeaddress"
        android:layout_alignParentStart="true"
        android:layout_alignParentEnd="true"
        android:layout_alignParentBottom="true"
        android:layout_marginStart="115dp"
        android:layout_marginTop="23dp"
        android:layout_marginEnd="128dp"
        android:layout_marginBottom="167dp"
        android:minHeight="48dp"
        android:onClick="SaveIntoDB"
        android:text="@string/savebtn"
        tools:ignore="VisualLintButtonSize,TouchTargetSizeCheck" />

</RelativeLayout>