<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".intentexamples.intentdialpadexample">

    <Button
        android:id="@+id/button19"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:onClick="Opendialpad"
        android:text="@string/open_dial_pad"
        app:layout_constraintEnd_toEndOf="@+id/button20"
        app:layout_constraintHorizontal_bias="0.444"
        app:layout_constraintStart_toStartOf="@+id/button20"
        app:layout_constraintTop_toTopOf="parent" />

    <Button
        android:id="@+id/button20"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="12dp"
        android:onClick="opengoogle"
        android:text="@string/open_google"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.492"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/button19"
        tools:ignore="VisualLintOverlap" />

    <Button
        android:id="@+id/button21"
        android:layout_width="132dp"
        android:layout_height="55dp"
        android:onClick="opengallery"
        android:text="@string/open_gallery"
        app:layout_constraintEnd_toEndOf="@+id/button20"
        app:layout_constraintHorizontal_bias="0.285"
        app:layout_constraintStart_toStartOf="@+id/button20"
        app:layout_constraintTop_toBottomOf="@+id/button20"
        tools:ignore="VisualLintOverlap" />

    <ImageView
        android:id="@+id/intentimggallery"
        android:layout_width="82dp"
        android:layout_height="63dp"
        android:layout_marginBottom="36dp"
        android:contentDescription="@string/todoimg"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="@+id/button21"
        app:layout_constraintHorizontal_bias="0.54"
        app:layout_constraintStart_toStartOf="@+id/button21"
        tools:ignore="ImageContrastCheck"
        tools:srcCompat="@tools:sample/avatars" />
</androidx.constraintlayout.widget.ConstraintLayout>